fix(style): remove focus visible because of f*safari (#710)

--- a/webapp/client/public/css/base.css
+++ b/webapp/client/public/css/base.css
@@ -120,7 +120,7 @@ input.form-control:hover {
   border: 2px solid var(--hover-border-color);
 }
 
-input.form-control:focus-visible {
+input.form-control:focus {
   border: 2px solid var(--border-color);
   box-shadow: 0 0 0 2px var(--focus-color);
 }
@@ -142,7 +142,7 @@ input.form-control.field-error-found {
   min-height: 55px;
 }
 
-.steuerlotse-select:focus-visible {
+.steuerlotse-select:focus {
   border: 2px solid var(--focus-border-color);
   box-shadow: 0 0 0 2px var(--focus-color);
 }
@@ -281,12 +281,6 @@ ol li::before {
          move the style definition to assorted.css. */
 .list-unstyled li a {
   color: var(--text-color);
-}
-
-.btn:focus, .btn-primary:focus, .btn-secondary:focus,
-.btn-primary:not(:disabled):not(.disabled):active:focus,
-.btn-secondary:not(:disabled):not(.disabled).active:focus {
-  box-shadow: none;
 }
 
 .btn-outline-secondary {
